--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,29 @@
+server:
+  port: 9382
+
 spring:
   kafka:
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: 192.168.0.64:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-server:
-  port: 8080
+      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      acks: all
+      retries: 5
+      linger-ms: 10
+      batch-size: 32768
+      compression-type: lz4
+      max-request-size: 10485760
+
+file:
+  remote:
+    host: 192.168.0.85
+    user: pvoice
+    pass: "skfodi$3312"
+    sftp: false
+
+app:
+  queue:
+    capacity: 1000
+    offer-timeout-ms: 200
+  worker:
+    threads: 8
