--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.jcraft:jsch:0.1.55'
     implementation 'commons-net:commons-net:3.8.0'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
