--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,12 +10,20 @@ spring:
       acks: all
       retries: 5
       linger-ms: 10
-      batch-size: 32768
       compression-type: lz4
-      max-request-size: 10485760
+#    consumer:
+#      bootstrap-servers: 192.168.0.64:9092
+#      group-id: your-consumer-group-id   # 필수, 고유한 그룹 ID
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      auto-offset-reset: latest          # earliest or latest
 app:
   queue:
     capacity: 10000
     offer-timeout-ms: 200
   worker:
     threads: 8
+  target-ip: 192.168.10.183
+  target-port: 9382
+  debug:
+    enabled: true
